--- a/WebDevelopment-1/webpage.html
+++ b/WebDevelopment-1/webpage.html
@@ -78,6 +78,6 @@
         </div>
     </section>
 </main>
-<footer>Designed and Developed by <span>Veena</span></footer>
+<footer>Designed and Developed by <span>Vns</span></footer>
 </body>
 </html>
